--- a/bmc/index.html
+++ b/bmc/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Business Infinity — Business Model Canvas</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-<header>
+---
+layout: default
+title: "Business Infinity — Business Model Canvas"
+---
+
+<header class="page-header">
   <h1>Business Infinity — Business Model Canvas</h1>
   <div class="subtitle">ASI Saga’s AI Boardroom: Dual‑Market Vision with Recursive & Exponential Network Effect</div>
 </header>
@@ -105,6 +101,4 @@
   </section>
 </main>
 
-<script src="/assets/js/bmc/app.js"></script>
-</body>
-</html>
+<script src="{{ '/assets/js/bmc/app.js' | relative_url }}"></script>
