--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ASI Saga GitHub Project Issues (Gantt)</title>
-  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.5.0/dist/frappe-gantt.css">
-    <link rel="stylesheet" href="/assets/css/pages/roadmap.css">
-</head>
-<body>
-  <h1>Business Infinity - Roadmap</h1>
-  <div id="gantt"><div id="loading">Loading issues...</div></div>
-  <script src="https://unpkg.com/frappe-gantt@0.5.0/dist/frappe-gantt.min.js"></script>
-  <script src="/assets/js/roadmap/script.js"></script>
-</body>
-</html>
+---
+layout: default
+title: "Business Infinity - Roadmap"
+permalink: /roadmap/
+---
+
+<link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.5.0/dist/frappe-gantt.css">
+<link rel="stylesheet" href="{{ '/assets/css/pages/roadmap.css' | relative_url }}">
+
+<h1>{{ page.title }}</h1>
+
+<div id="gantt">
+  <div id="loading">Loading issues...</div>
+</div>
+
+<script src="https://unpkg.com/frappe-gantt@0.5.0/dist/frappe-gantt.min.js"></script>
+<script src="{{ '/assets/js/roadmap/script.js' | relative_url }}"></script>
